--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,13 @@
     <artifactId>gper-de-factory</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.2.0.RELEASE</version>
+		<relativePath/> <!-- lookup parent from repository -->
+	</parent>
+
     <dependencies>
 	    <!-- spring -->
 	    <dependency>
@@ -52,6 +59,22 @@
 	    </dependency>
 
 	    <dependency>
+		    <groupId>org.springframework.statemachine</groupId>
+		    <artifactId>spring-statemachine-core</artifactId>
+		    <version>2.0.1.RELEASE</version>
+	    </dependency>
+	    <dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-test</artifactId>
+		    <scope>test</scope>
+	    </dependency>
+	    <dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-autoconfigure</artifactId>
+		    <version>RELEASE</version>
+	    </dependency>
+
+	    <dependency>
 		    <groupId>com.alibaba</groupId>
 		    <artifactId>fastjson</artifactId>
 		    <version>1.2.44</version>
@@ -83,6 +106,12 @@
 		    <artifactId>netty-all</artifactId>
 		    <version>4.1.47.Final</version>
 	    </dependency>
+	    <dependency>
+		    <groupId>com.sun.faces</groupId>
+		    <artifactId>jsf-api</artifactId>
+		    <version>1.2</version>
+	    </dependency>
+
 
 
 	    <dependency>
