--- a/pom.xml
+++ b/pom.xml
@@ -11,51 +11,58 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.2.0.RELEASE</version>
+		<version>2.1.0.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<java.version>1.8</java.version>
+		<spring-framework.version>5.0.6.RELEASE</spring-framework.version>
+	</properties>
 
     <dependencies>
 	    <!-- spring -->
 	    <dependency>
 		    <groupId>org.springframework</groupId>
 		    <artifactId>spring-core</artifactId>
-		    <version>5.0.2.RELEASE</version>
+		    <version>${spring-framework.version}</version>
 	    </dependency>
 	    <dependency>
 		    <groupId>org.springframework</groupId>
 		    <artifactId>spring-context-support</artifactId>
-		    <version>5.0.2.RELEASE</version>
+		    <version>${spring-framework.version}</version>
 	    </dependency>
 	    <dependency>
 		    <groupId>org.springframework</groupId>
 		    <artifactId>spring-context</artifactId>
-		    <version>5.0.2.RELEASE</version>
+		    <version>${spring-framework.version}</version>
 	    </dependency>
 	    <dependency>
 		    <groupId>org.springframework</groupId>
 		    <artifactId>spring-beans</artifactId>
-		    <version>5.0.2.RELEASE</version>
+		    <version>${spring-framework.version}</version>
 	    </dependency>
 	    <dependency>
 		    <groupId>org.springframework</groupId>
 		    <artifactId>spring-web</artifactId>
-		    <version>5.0.2.RELEASE</version>
+		    <version>${spring-framework.version}</version>
 	    </dependency>
 	    <dependency>
 		    <groupId>org.springframework</groupId>
 		    <artifactId>spring-webmvc</artifactId>
-		    <version>5.0.2.RELEASE</version>
+		    <version>${spring-framework.version}</version>
 	    </dependency>
 	    <dependency>
 		    <groupId>org.springframework</groupId>
 		    <artifactId>spring-webmvc</artifactId>
-		    <version>5.0.2.RELEASE</version>
+		    <version>${spring-framework.version}</version>
 	    </dependency>
 	    <dependency>
 		    <groupId>org.springframework</groupId>
 		    <artifactId>spring-jdbc</artifactId>
-		    <version>5.0.2.RELEASE</version>
+		    <version>${spring-framework.version}</version>
 	    </dependency>
 
 	    <dependency>
