--- a/pom.xml
+++ b/pom.xml
@@ -118,8 +118,11 @@
 		    <artifactId>jsf-api</artifactId>
 		    <version>1.2</version>
 	    </dependency>
-
-
+	    <dependency>
+		    <groupId>com.google.guava</groupId>
+		    <artifactId>guava</artifactId>
+		    <version>18.0</version>
+	    </dependency>
 
 	    <dependency>
             <groupId>junit</groupId>
